--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
+body {
+  /* background-color: #f7f5f5; */
+  background-color: #eaeded;
+}
+
 .App {
   text-align: center;
+}
+
+.App-main {
+  display: flex;
+  padding: 14px 18px 0 18px;
 }
 
 /* .App-header {
