--- a/src/css/CartItem.css
+++ b/src/css/CartItem.css
@@ -1,5 +1,8 @@
 .CartItem {
   display: flex;
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 21px;
+  padding-top: 12px;
 }
 
 .CartItem-image {
@@ -20,5 +23,51 @@
 
 .CartItem-price {
   background-color: burlywood;
-  flex: 0.1;
+  font-size: 18px;
+  font-weight: 700;
+  /* flex: 0.1; */
+}
+
+.info-title h2 {
+  margin: 0;
+  font-size: 18px;
+  color: #007185;
+}
+
+.info-stock {
+  color: #007600;
+  margin-top: 4px;
+}
+
+.item-actions {
+  margin-top: 4px;
+  display: flex;
+  align-items: center;
+}
+
+.item-quantity select {
+  background-color: #f0f2f2;
+  padding: 8px;
+  border-radius: 7px;
+  box-shadow: 0px 2px 5px 1px rgba(15, 17, 17, 0.15);
+}
+
+.item-quantity select:focus {
+  outline: none;
+}
+
+.item-actions-divider {
+  margin-left: 8px;
+  margin-right: 8px;
+  color: #ddd;
+  font-weight: bold;
+}
+
+.item-delete {
+  color: #007185;
+}
+
+.item-delete:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
