--- a/src/css/CartItem.css
+++ b/src/css/CartItem.css
@@ -9,6 +9,9 @@
   background-color: aliceblue;
   width: 180px;
   height: 180px;
+  flex-grow: 0;
+  flex-shrink: 0;
+  margin-right: 16px;
 }
 
 .CartItem-image img {
@@ -25,6 +28,7 @@
   background-color: burlywood;
   font-size: 18px;
   font-weight: 700;
+  margin-left: 16px;
   /* flex: 0.1; */
 }
 
@@ -70,4 +74,8 @@
 .item-delete:hover {
   text-decoration: underline;
   cursor: pointer;
+}
+
+.CartTotal {
+  max-height: 180px;
 }
